@@ -23,40 +23,49 @@ import com.echothree.model.control.search.server.control.SearchControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.search.server.entity.SearchResultActionType;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.search.server.factory.SearchResultActionTypeFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetSearchResultActionTypesCommand
-        extends BaseMultipleEntitiesCommand<SearchResultActionType, GetSearchResultActionTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<SearchResultActionType, GetSearchResultActionTypesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SearchResultActionType.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetSearchResultActionTypesCommand */
     public GetSearchResultActionTypesCommand() {
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+    }
+
+    @Override
+    protected void handleForm() {
+        // no form fields
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var searchControl = Session.getModelController(SearchControl.class);
+        
+        return searchControl.countSearchResultActionTypes();
     }
 
     @Override
@@ -72,6 +81,10 @@ public class GetSearchResultActionTypesCommand
 
         if(entities != null) {
             var searchControl = Session.getModelController(SearchControl.class);
+
+            if(session.hasLimit(SearchResultActionTypeFactory.class)) {
+                result.setSearchResultActionTypeCount(getTotalEntities());
+            }
 
             result.setSearchResultActionTypes(searchControl.getSearchResultActionTypeTransfers(getUserVisit(), entities));
         }
