@@ -22,42 +22,50 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.vendor.server.control.VendorControl;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.model.data.vendor.server.entity.ItemPurchasingCategory;
 import com.echothree.model.data.vendor.server.factory.ItemPurchasingCategoryFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetItemPurchasingCategoriesCommand
-        extends BaseMultipleEntitiesCommand<ItemPurchasingCategory, GetItemPurchasingCategoriesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<ItemPurchasingCategory, GetItemPurchasingCategoriesForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ItemPurchasingCategory.name(), SecurityRoles.List.name())
-                )))
-        )));
-
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                ))
         ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetItemPurchasingCategoriesCommand */
     public GetItemPurchasingCategoriesCommand() {
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+    }
+
+    @Override
+    protected void handleForm() {
+        // no form fields
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var vendorControl = Session.getModelController(VendorControl.class);
+
+        return vendorControl.countItemPurchasingCategories();
     }
 
     @Override
@@ -75,7 +83,7 @@ public class GetItemPurchasingCategoriesCommand
             var vendorControl = Session.getModelController(VendorControl.class);
 
             if(session.hasLimit(ItemPurchasingCategoryFactory.class)) {
-                result.setItemPurchasingCategoryCount(vendorControl.countItemPurchasingCategories());
+                result.setItemPurchasingCategoryCount(getTotalEntities());
             }
 
             result.setItemPurchasingCategories(vendorControl.getItemPurchasingCategoryTransfers(getUserVisit(), entities));
